--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -2,7 +2,7 @@ name: hdulib
 
 on:
   schedule:
-    - cron: "35 21 * * *"
+    - cron: "50 19 * * *"
   workflow_dispatch:
 jobs:
   build:
@@ -24,5 +24,5 @@ jobs:
 
       - name: Run script
         env:
-          CONFIG: ${{ secrets.config }}
+          CONFIG: ${{ secrets.CONFIG }}
         run: python main.py
