--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,6 +23,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Verify main.py exists
+        run: |
+          if [ ! -f main.py ]; then echo "main.py not found"; exit 1; fi
+
       - name: Run script
         env:
           CONFIG: ${{ secrets.CONFIG }}
