--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v3
@@ -23,11 +23,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Verify main.py exists
-        run: |
-          if [ ! -f main.py ]; then echo "main.py not found"; exit 1; fi
-
-      - name: Run script
+      - name: Run script with timeout
         env:
           CONFIG: ${{ secrets.CONFIG }}
-        run: python main.py
+        run: |
+          echo "Starting script..."
+          timeout 5m python main.py
